fixed a bug in lesson 16

--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -14,6 +14,14 @@
             </header>
             <main class="main">
                 <div class="main__container">
+
+                    <div class="flex">
+                        <div class="flex__row"></div>
+                        <div class="flex__row"></div>
+                        <div class="flex__row"></div>
+                        <div class="flex__row"></div>
+                    </div>
+
                     <div class="call-back">
                         <h4 class="call-back__label">Contact Us</h4>
                         <h2 class="call-back__title">Request A Call Back !</h2>
@@ -21,7 +29,7 @@
                             class="call-back__form back-call"
                             method="GET"
                             action="#">
-                            <div class="back-call__wraper">
+                            <div class="back-call__row">
                                 <div class="back-call__personal-data">
                                     <input
                                         required
@@ -43,7 +51,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="back-call__wraper">
+                            <div class="back-call__row">
                                 <div class="back-call__personal-data">
                                     <input
                                         required
@@ -68,7 +76,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="back-call__wraper-message">
+                            <div class="back-call__row-message">
                                 <textarea
                                     required
                                     class="back-call__message"
