--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -1,23 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <title>lesson 16</title>
     </head>
     <body>
         <div class="wraper">
             <header class="header">
-                <div class="header__container"></div>
+                <div class="header__container">
+                    <div class="header__logo">
+                        <a href="index.html">
+                            <img src="img/logo.svg" alt="Logo">
+                        </a>
+                    </div>
+                    <div class="header__search search">
+                        <div class="search__image">
+                            <img src="img/icons/search.svg" alt="Search">
+                        </div>
+                        <input
+                            type="text"
+                            class="search__input"
+                            placeholder="Search">
+                    </div>
+                    <div class="header__languages languages">
+                        English (united States)
+                        <ul class="languages__options">
+                            <li>English</li>
+                            <li>Français</li>
+                            <li>Español</li>
+                        </ul>
+                    </div>
+                    <div class="header__btn">
+                        <a
+                            href="#"
+                            class="button button--border active"
+                            id="purpleButton">
+                            Login
+                        </a>
+                        <a
+                            href="#"
+                            class="button button--border"
+                            id="borderButton">
+                            Sign Up
+                        </a>
+                    </div>
+                </div>
             </header>
             <main class="main">
                 <div class="main__container">
-
+                    <div class="page">
+                        <div class="page__consulting consulting">
+                            <div class="consulting__wrap-title">
+                                <h1 class="consulting__title">
+                                    Request A Call Back !
+                                </h1>
+                                <h4 class="consulting__subtitle">Contact Us</h4>
+                            </div>
+                            <form
+                                class="form-1 consulting__form"
+                                method="GET"
+                                action="#">
+                                <div class="consulting__items items">
+                                    <div class="consulting__item item">
+                                        <input
+                                            required
+                                            class="item__input"
+                                            type="text"
+                                            id="nameConsulting">
+                                        <label
+                                            class="item__placeholder item__placeholder--visible"
+                                            for="nameConsulting">
+                                            Your Name
+                                        </label>
+                                    </div>
+                                    <div class="consulting__item item">
+                                        <input
+                                            required
+                                            class="item__input"
+                                            type="email"
+                                            id="emailConsulting">
+                                        <label
+                                            class="item__placeholder item__placeholder--visible"
+                                            for="emailConsulting">
+                                            Email Address
+                                        </label>
+                                    </div>
+                                    <div class="consulting__item item">
+                                        <input
+                                            required
+                                            class="item__input"
+                                            type="tel"
+                                            id="phoneConsulting">
+                                        <label
+                                            class="item__placeholder item__placeholder--visible"
+                                            for="phoneConsulting">
+                                            Phone Number
+                                        </label>
+                                    </div>
+                                    <div class="consulting__item item">
+                                        <input
+                                            required
+                                            class="item__input"
+                                            type="text"
+                                            id="subjectConsulting">
+                                        <label
+                                            class="item__placeholder item__placeholder--visible"
+                                            for="subjectConsulting">
+                                            Subject
+                                        </label>
+                                    </div>
+                                    <div
+                                        class="consulting__item item item--textarea">
+                                        <textarea
+                                            required
+                                            class="item__textarea item__textarea--consulting"
+                                            name="message"
+                                            id="messageConsulting"></textarea>
+                                        <label
+                                            class="item__placeholder item__placeholder--visible item__placeholder--textarea"
+                                            for="messageConsulting">
+                                            Message...
+                                        </label>
+                                    </div>
+                                </div>
+                                <button
+                                    class="consulting__btn button"
+                                    type="submit">
+                                    Submit
+                                </button>
+                            </form>
+                        </div>
+    
+                        <div class="page__euphoria"></div>
+                    </div>
                 </div>
             </main>
             <footer class="footer"></footer>
         </div>
+        <script src="js/btn.js"></script>
     </body>
 </html>
